--- a/frontend/src/app/modules/features/employer/profile/create-employer-profile/create-employer-profile.component.html
+++ b/frontend/src/app/modules/features/employer/profile/create-employer-profile/create-employer-profile.component.html
@@ -217,8 +217,8 @@
       </image-cropper>
     </div>
     <div class="modal-footer mt-3">
-      <button type="button" class="btn btn-gren" data-dismiss="modal" (click)="SetPreviousProfilePic()">{{"shared.cancel" | translate }}</button>
-      <button type="button" class="btn btn-gren" data-dismiss="modal" (click)="onImageCropSave()">{{"shared.save" | translate }}</button>
+      <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="SetPreviousProfilePic()">{{"shared.cancel" | translate }}</button>
+      <button type="button" class="btn btn-theme-blue" data-dismiss="modal" (click)="onImageCropSave()">{{"shared.save" | translate }}</button>
     </div>
   </form>
 </ng-template>
