--- a/frontend/src/app/modules/features/user/profile/create-candidate/candidate-review-modal/candidate-review-modal.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/candidate-review-modal/candidate-review-modal.component.html
@@ -863,7 +863,7 @@
 			<button (click)="closeAdd()" type="button" class="btn btn-theme-orange">
 				{{"shared.close" | translate }} 
 			</button>
-			<button [disabled]="!r.valid || checkref(0)===false" (click)="closeSave()" type="button" class="btn btn-theme-blue">
+			<button (click)="closeSave()" type="button" class="btn btn-theme-blue">
 				{{"shared.save" | translate }} 
 			</button>
 		</div>
