--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
@@ -462,8 +462,8 @@
             </image-cropper>
         </div>
         <div class="modal-footer mt-3">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="SetPreviousProfilePic()">Cancel</button>
-            <button type="button" class="btn btn-theme-blue" data-dismiss="modal" (click)="onImageCropSave()">Save</button>
+            <button type="button" class="btn btn-gren" data-dismiss="modal" (click)="SetPreviousProfilePic()">Cancel</button>
+            <button type="button" class="btn btn-gren" data-dismiss="modal" (click)="onImageCropSave()">Save</button>
         </div>
     </form>
 </ng-template>
