--- a/frontend/src/app/shared/component/shared-user-profile-matches/shared-user-profile-matches.component.html
+++ b/frontend/src/app/shared/component/shared-user-profile-matches/shared-user-profile-matches.component.html
@@ -392,10 +392,6 @@
 								  {{item.degree}}
 								</span>
 							</ng-container> 
-							<span *ngIf="missingElement && matchingUsers?.profile?.education_qualification=='' && postedJobsDetails?.education">
-							  <i class="fa fa-times text-danger "  ></i>
-								  --
-							</span>
 							<span *ngIf="missingElement && checkType(matchingUsers?.profile?.education_qualification,postedJobsDetails?.education,'education')">
 								<i class="fa fa-times text-danger "  ></i>
 								  {{postedJobsDetails.education}}
@@ -509,7 +505,7 @@
 					<div class="row info-box"  >
 						<div class="col-lg-7 info" >
 							<ul class="list-group" *ngFor="let item of postedJobsDetails?.others; let i=index">
-								<li class="otherpreff  text-capitalize " [ngClass]="(isMultipleMatches === true)?'handsExp-multi':'handsExp'"  *ngIf="checkDataOthers(postedJobsDetails?.match_select[item?.id],'0')" >
+								<li class="list-group-item text-capitalize " [ngClass]="(isMultipleMatches === true)?'handsExp-multi':'handsExp'"  *ngIf="checkDataOthers(postedJobsDetails?.match_select[item?.id],'0')" >
 								  <span *ngIf="missingElement" ><i class="fa fa-times text-danger "></i>  -- 
 									<a class="handsExp-color"> {{item?.title}} </a> 
 									</span> 
@@ -525,7 +521,7 @@
 					<div class="row info-box"  >
 						<div class="col-lg-7 info" >
 							<ul class="list-group" *ngFor="let item of postedJobsDetails?.others; let i=index">
-								<li class="otherpreff text-capitalize"  *ngIf="checkDataOthers(postedJobsDetails?.match_select[item?.id],'0')" >
+								<li class="list-group-item text-capitalize"  *ngIf="checkDataOthers(postedJobsDetails?.match_select[item?.id],'0')" >
 								  <span *ngIf="matchedElement && checkValuesField(item?.id , 'yes')" > <i class="fas fa-check text-green " ></i> {{checkValues(item?.id)}} <a class="handsExp-color"> {{item?.title}} </a> </span>
 								  <span *ngIf="missingElement && checkValuesField(item?.id , 'no')" > <i class="fas fa-times text-danger " ></i> {{checkValues(item?.id)}} <a class="handsExp-color"> {{item?.title}} </a> </span>
 								</li>
@@ -907,10 +903,6 @@
 								  {{item.degree}}
 								</span>
 							</ng-container> 
-							<span *ngIf="missingElement && matchingUsers?.profile?.education_qualification=='' && postedJobsDetails?.education">
-							  <i class="fa fa-times text-danger "  ></i>
-								  --
-							</span>
 							<span *ngIf="missingElement && checkType(matchingUsers?.profile?.education_qualification,postedJobsDetails?.education,'education')">
 								<i class="fa fa-times text-danger "  ></i>
 								  {{postedJobsDetails.education}}
@@ -1025,7 +1017,7 @@
 					<div class="row info-box"  >
 						<div class="col-lg-7 info" >
 							<ul class="list-group" *ngFor="let item of postedJobsDetails?.others; let i=index">
-								<li class="otherpreff text-capitalize "  [ngClass]="(isMultipleMatches === true)?'handsExp-multi':'handsExp'"  *ngIf="checkDataOthers(postedJobsDetails?.match_select[item?.id],'1')" >
+								<li class="list-group-item text-capitalize "  [ngClass]="(isMultipleMatches === true)?'handsExp-multi':'handsExp'"  *ngIf="checkDataOthers(postedJobsDetails?.match_select[item?.id],'1')" >
 								  <span *ngIf="missingElement" ><i class="fa fa-times text-danger "></i>  -- 
 									<a class="handsExp-color"> {{item?.title}} </a> 
 									</span> 
@@ -1041,7 +1033,7 @@
 					<div class="row info-box"  >
 						<div class="col-lg-7 info" >
 							<ul class="list-group" *ngFor="let item of postedJobsDetails?.others; let i=index">
-								<li class="otherpreff text-capitalize"  *ngIf="checkDataOthers(postedJobsDetails?.match_select[item?.id],'1')" >
+								<li class="list-group-item text-capitalize"  *ngIf="checkDataOthers(postedJobsDetails?.match_select[item?.id],'1')" >
 								  <span *ngIf="matchedElement && checkValuesField(item?.id , 'yes')" > <i class="fas fa-check text-green " ></i> {{checkValues(item?.id)}} <a class="handsExp-color"> {{item?.title}} </a> </span>
 								  <span *ngIf="missingElement && checkValuesField(item?.id , 'no')" > <i class="fas fa-times text-danger " ></i> {{checkValues(item?.id)}} <a class="handsExp-color"> {{item?.title}} </a> </span>
 								
@@ -1421,13 +1413,8 @@
 								  
 								  {{item.degree}}
 								</span>
-							</ng-container>
-							<span *ngIf="missingElement && matchingUsers?.profile?.education_qualification=='' && postedJobsDetails?.education">
-							  <i class="fa fa-times text-danger "  ></i>
-								  --
-							</span>
+							</ng-container> 
 							<span *ngIf="missingElement && checkType(matchingUsers?.profile?.education_qualification,postedJobsDetails?.education,'education')">
-							
 								<i class="fa fa-times text-danger "  ></i>
 								  {{postedJobsDetails.education}}
 							</span>
@@ -1541,7 +1528,7 @@
 					<div class="row info-box"  >
 						<div class="col-lg-7 info" >
 							<ul class="list-group" *ngFor="let item of postedJobsDetails?.others; let i=index">
-								<li class="otherpreff text-capitalize " [ngClass]="(isMultipleMatches === true)?'handsExp-multi':'handsExp'"  *ngIf="checkDataOthers(postedJobsDetails?.match_select[item?.id],'2')" >
+								<li class="list-group-item text-capitalize " [ngClass]="(isMultipleMatches === true)?'handsExp-multi':'handsExp'"  *ngIf="checkDataOthers(postedJobsDetails?.match_select[item?.id],'2')" >
 								  <span *ngIf="missingElement" ><i class="fa fa-times text-danger "></i>  -- 
 									<a class="handsExp-color"> {{item?.title}} </a> 
 									</span> 
@@ -1557,7 +1544,7 @@
 					<div class="row info-box"  >
 						<div class="col-lg-7 info" >
 							<ul class="list-group" *ngFor="let item of postedJobsDetails?.others; let i=index">
-								<li class="otherpreff text-capitalize"  *ngIf="checkDataOthers(postedJobsDetails?.match_select[item?.id],'2')" >
+								<li class="list-group-item text-capitalize"  *ngIf="checkDataOthers(postedJobsDetails?.match_select[item?.id],'2')" >
 								  <span *ngIf="matchedElement && checkValuesField(item?.id , 'yes')" > <i class="fas fa-check text-green " ></i> {{checkValues(item?.id)}} <a class="handsExp-color"> {{item?.title}} </a> </span>
 								  <span *ngIf="missingElement && checkValuesField(item?.id , 'no')" > <i class="fas fa-times text-danger " ></i> {{checkValues(item?.id)}} <a class="handsExp-color"> {{item?.title}} </a> </span>
 								
@@ -1939,10 +1926,6 @@
 								  {{item.degree}}
 								</span>
 							</ng-container> 
-							<span *ngIf="missingElement && matchingUsers?.profile?.education_qualification=='' && postedJobsDetails?.education">
-							  <i class="fa fa-times text-danger "  ></i>
-								  --
-							</span>
 							<span *ngIf="missingElement && checkType(matchingUsers?.profile?.education_qualification,postedJobsDetails?.education,'education')">
 								<i class="fa fa-times text-danger "  ></i>
 								  {{postedJobsDetails.education}}
@@ -2058,7 +2041,7 @@
 					<div class="row info-box"  >
 						<div class="col-lg-7 info" >
 							<ul class="list-group" *ngFor="let item of postedJobsDetails?.others; let i=index">
-								<li class="otherpreff text-capitalize " [ngClass]="(isMultipleMatches === true)?'handsExp-multi':'handsExp'"  *ngIf="checkDataOthers(postedJobsDetails?.match_select[item?.id],'')" >
+								<li class="list-group-item text-capitalize " [ngClass]="(isMultipleMatches === true)?'handsExp-multi':'handsExp'"  *ngIf="checkDataOthers(postedJobsDetails?.match_select[item?.id],'')" >
 								  <span *ngIf="missingElement" ><i class="fa fa-times text-danger "></i>  -- 
 									<a class="handsExp-color"> {{item?.title}} </a> 
 									</span> 
@@ -2074,7 +2057,7 @@
 					<div class="row info-box"  >
 						<div class="col-lg-7 info" >
 							<ul class="list-group" *ngFor="let item of postedJobsDetails?.others; let i=index">
-								<li class="otherpreff text-capitalize"  *ngIf="checkDataOthers(postedJobsDetails?.match_select[item?.id],'')" >
+								<li class="list-group-item text-capitalize"  *ngIf="checkDataOthers(postedJobsDetails?.match_select[item?.id],'')" >
 								  <span *ngIf="matchedElement && checkValuesField(item?.id , 'yes')" > <i class="fas fa-check text-green " ></i> {{checkValues(item?.id)}} <a class="handsExp-color"> {{item?.title}} </a> </span>
 								  <span *ngIf="missingElement && checkValuesField(item?.id , 'no')" > <i class="fas fa-times text-danger " ></i> {{checkValues(item?.id)}} <a class="handsExp-color"> {{item?.title}} </a> </span>
 								
