--- a/frontend/src/assets/css/style.css
+++ b/frontend/src/assets/css/style.css
@@ -101,7 +101,7 @@ a:hover {
   width: 6px;
     height: 6px;
     border-radius:25px;
-    opacity: 0!important;
+    /* opacity: 0!important; */
 }
 
 /* Track */
@@ -1637,7 +1637,7 @@ a:hover {
     font-size: 14px;
     min-height: 26px;
     font-weight: 600;
-    text-overflow: ellipsis;
+    /* text-overflow: ellipsis; */
     overflow: hidden;
     /* min-width: 350px; */
     white-space: nowrap;
