--- a/frontend/src/app/modules/features/employer/employer-candidate-multiple-profile-matches/employer-candidate-multiple-profile-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-multiple-profile-matches/employer-candidate-multiple-profile-matches.component.html
@@ -117,7 +117,7 @@
 					[missingElement]="missingElement" [matchedElement]="matchedElement"
 					[moreElement]="moreElement" [userInfo]="userInfo">
 					</app-shared-job-profile-multiple-matches>
-						<div class="col-lg-12 info" style="text-align:end;" *ngIf=" matchingJob?.jobs?.status ==1 && matchingJob?.jobs?.mail !=true " >
+						<div class="col-lg-12 info" style="text-align:end;" *ngIf=" matchingJob?.jobs?.jobstatus ==null && matchingJob?.jobs?.status ==1 && matchingJob?.jobs?.mail !=true " >
 										<button (click)="onToggleSendMail(true, matchingJob?.jobs)" type="button" class="btn btn-outline-orange ml-auto"  style="bottom: 15px; right: 15px;"> <i
 												class="fas fa-paper-plane"></i> {{"shared.sendMail" | translate}}</button>
 									</div>
