--- a/frontend/src/app/modules/features/employer/employee-chart/employee-chart.component.html
+++ b/frontend/src/app/modules/features/employer/employee-chart/employee-chart.component.html
@@ -347,7 +347,7 @@
 						</div>
 					</div>
 					<div class="col-lg-12">
-						<div class="table-responsive tableBox">
+						<div style="position: relative;overflow-y: auto;height: 300px;" class="table-responsive tableBox">
 							<table class="table">
 							  <thead>
 								<tr>
