--- a/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.html
+++ b/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.html
@@ -24,7 +24,7 @@
 			<div class="container container-big">
 				<div class="row">
 					<div class="col-8">
-						<h5 class="text-capitalize"><img style="width: 30px;" class="image-fluid rounded mr-2" [src]="userDetails?.photo ? userprofilepath+userDetails?.photo : 'assets/images/user-img-icon.jpg'">{{userDetails.first_name +' '+ userDetails.last_name}}<span class="mx-2"> | </span>{{userDetails.current_employer_role}}</h5>
+						<h5 class="text-capitalize"><img style="width: 30px;" class="image-fluid rounded mr-2" [src]="userDetails?.photo ? userprofilepath+userDetails?.photo : 'assets/images/user-img-icon.jpg'">{{userDetails.first_name +' '+ userDetails.last_name}}<span *ngIf="userDetails.current_employer_role" class="mx-2"> | </span>{{userDetails.current_employer_role}}</h5>
 					</div>
 					<div class="col-4 text-right">
 						
