--- a/frontend/src/app/shared/component/shared-user-profile-job-matches/shared-user-profile-job-matches.component.html
+++ b/frontend/src/app/shared/component/shared-user-profile-job-matches/shared-user-profile-job-matches.component.html
@@ -170,12 +170,12 @@
 				<div class="row">
 					<div class="col-lg-6 col-md-55 col-sm-4 caption">
 						<ul class="list-group">
-							<li class="list-group-item">{{"userProfile.jobType" | translate }}</li>
+							<li class="list-group-item">{{"userProfile.jobRole" | translate }}</li>
 						</ul>
 					</div>
 					<div class="col-lg-6 col-md-77 col-sm-8 info">
 						<ul class="list-group ul-value">
-							{{userInfo?.employer_role_type}}
+							{{userInfo?.employer_role_type?userInfo?.employer_role_type: '--'}}
 						</ul>
 					</div>
 				</div>				
@@ -557,12 +557,12 @@
 				<div class="row">
 					<div class="col-lg-6 col-md-55 col-sm-4 caption">
 						<ul class="list-group">
-							<li class="list-group-item">{{"userProfile.jobType" | translate }}</li>
+							<li class="list-group-item">{{"userProfile.jobRole" | translate }}</li>
 						</ul>
 					</div>
 					<div class="col-lg-6 col-md-77 col-sm-8 info">
 						<ul class="list-group ul-value">
-							{{userInfo?.employer_role_type}}
+							{{userInfo?.employer_role_type?userInfo?.employer_role_type: '--'}}
 						</ul>
 					</div>
 				</div>				
@@ -931,12 +931,12 @@
 				<div class="row">
 					<div class="col-lg-6 col-md-55 col-sm-4 caption">
 						<ul class="list-group">
-							<li class="list-group-item">{{"userProfile.jobType" | translate }}</li>
+							<li class="list-group-item">{{"userProfile.jobRole" | translate }}</li>
 						</ul>
 					</div>
 					<div class="col-lg-6 col-md-77 col-sm-8 info">
 						<ul class="list-group ul-value">
-							{{userInfo?.employer_role_type}}
+							{{userInfo?.employer_role_type?userInfo?.employer_role_type: '--'}}
 						</ul>
 					</div>
 				</div>				
@@ -1303,12 +1303,12 @@
 				<div class="row">
 					<div class="col-lg-6 col-md-55 col-sm-4 caption">
 						<ul class="list-group">
-							<li class="list-group-item">{{"userProfile.jobType" | translate }}</li>
+							<li class="list-group-item">{{"userProfile.jobRole" | translate }}</li>
 						</ul>
 					</div>
 					<div class="col-lg-6 col-md-77 col-sm-8 info">
 						<ul class="list-group ul-value">
-							{{userInfo?.employer_role_type}}
+						{{userInfo?.employer_role_type?userInfo?.employer_role_type: '--'}}
 						</ul>
 					</div>
 				</div>				
