--- a/frontend/src/app/shared/component/shared-job-profile-multiple-matches/shared-job-profile-multiple-matches.component.html
+++ b/frontend/src/app/shared/component/shared-job-profile-multiple-matches/shared-job-profile-multiple-matches.component.html
@@ -206,6 +206,10 @@
                           <i class="fas fa-times text-danger "></i>
 							{{jobInfo.employer_role_type}}
                         </span>
+						<span *ngIf="missingElement && jobInfo.employer_role_type && !userInfo?.employer_role_type">
+                          <i class="fas fa-times text-danger "></i>
+							{{jobInfo.employer_role_type}}
+                        </span>
                       </li>
 				</ul>
 			</div>
@@ -617,6 +621,10 @@
                           {{jobInfo.employer_role_type}}
                         </span>
                         <span *ngIf="missingElement && checkTypeValue(jobInfo.employer_role_type,userInfo?.employer_role_type,'missing')">
+                          <i class="fas fa-times text-danger "></i>
+							{{jobInfo.employer_role_type}}
+                        </span>
+						<span *ngIf="missingElement && jobInfo.employer_role_type && !userInfo?.employer_role_type">
                           <i class="fas fa-times text-danger "></i>
 							{{jobInfo.employer_role_type}}
                         </span>
@@ -1036,6 +1044,10 @@
                           <i class="fas fa-times text-danger "></i>
 							{{jobInfo.employer_role_type}}
                         </span>
+						<span *ngIf="missingElement && jobInfo.employer_role_type && !userInfo?.employer_role_type">
+                          <i class="fas fa-times text-danger "></i>
+							{{jobInfo.employer_role_type}}
+                        </span>
                       </li>
 				</ul>
 			</div>
@@ -1449,6 +1461,10 @@
                           {{jobInfo.employer_role_type}}
                         </span>
                         <span *ngIf="missingElement && checkTypeValue(jobInfo.employer_role_type,userInfo?.employer_role_type,'missing')">
+                          <i class="fas fa-times text-danger "></i>
+							{{jobInfo.employer_role_type}}
+                        </span>
+						<span *ngIf="missingElement && jobInfo.employer_role_type && !userInfo?.employer_role_type">
                           <i class="fas fa-times text-danger "></i>
 							{{jobInfo.employer_role_type}}
                         </span>
