--- a/frontend/src/app/shared/component/shared-user-profile-matches/shared-user-profile-matches.component.html
+++ b/frontend/src/app/shared/component/shared-user-profile-matches/shared-user-profile-matches.component.html
@@ -261,6 +261,9 @@
 									<i class="fas fa-times text-danger "></i>
 									{{postedJobsDetails?.employer_role_type }}
 								</span>
+								<span  *ngIf="missingElement && postedJobsDetails?.employer_role_type && !matchingUsers?.profile?.employer_role_type">
+									<i class="fas fa-times text-danger "></i>--
+								</span>
 							</span>
 						</li>
 					</ul>
@@ -776,6 +779,9 @@
 									<i class="fas fa-times text-danger "></i>
 									{{postedJobsDetails?.employer_role_type }}
 								</span>
+								<span  *ngIf="missingElement && postedJobsDetails?.employer_role_type && !matchingUsers?.profile?.employer_role_type">
+									<i class="fas fa-times text-danger "></i>--
+								</span>
 							</span>
 						</li>
 					</ul>
@@ -1290,6 +1296,9 @@
 								<span  *ngIf="missingElement && checkTypeValue(postedJobsDetails?.employer_role_type,matchingUsers?.profile?.employer_role_type,'missing');">
 									<i class="fas fa-times text-danger "></i>
 									{{postedJobsDetails?.employer_role_type }}
+								</span>
+								<span  *ngIf="missingElement && postedJobsDetails?.employer_role_type && !matchingUsers?.profile?.employer_role_type">
+									<i class="fas fa-times text-danger "></i>--
 								</span>
 							</span>
 						</li>
@@ -1807,6 +1816,9 @@
 								<span  *ngIf="missingElement && checkTypeValue(postedJobsDetails?.employer_role_type,matchingUsers?.profile?.employer_role_type,'missing');">
 									<i class="fas fa-times text-danger "></i>
 									{{postedJobsDetails?.employer_role_type }}
+								</span>
+								<span  *ngIf="missingElement && postedJobsDetails?.employer_role_type && !matchingUsers?.profile?.employer_role_type">
+									<i class="fas fa-times text-danger "></i>--
 								</span>
 							</span>
 						</li>
