hide happy client in home page

--- a/frontend/src/app/modules/features/common/landing/landing.component.html
+++ b/frontend/src/app/modules/features/common/landing/landing.component.html
@@ -58,7 +58,7 @@
 <!-- //Login Section -->
 
  <!-- Company Section -->
- <section class="top-companies">
+ <!--<section class="top-companies">
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
@@ -112,7 +112,7 @@
       </div>
     </div>
   </div>
-  </section>
+  </section>-->
   <!-- //Company Section -->
 
 	<!-- SAPW Info Section -->
