--- a/frontend/src/app/modules/auth/user-auth/user-login/user-login.component.html
+++ b/frontend/src/app/modules/auth/user-auth/user-login/user-login.component.html
@@ -55,7 +55,7 @@
       <div class="col-lg-7">
         <div class="video-sec">
           <video width="100%" controls>
-            <source src="assets/images/jobseeker-video.mp4" type="video/mp4">
+            <source src="assets/images/newuser.mp4" type="video/mp4">
           </video>
         </div>
       </div>
