--- a/frontend/src/app/layout/header/header.component.html
+++ b/frontend/src/app/layout/header/header.component.html
@@ -102,7 +102,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-light theme-nav" *ngIf="loggedUserInfo?.isLoggedIn && loggedUserInfo?.role && loggedUserInfo?.role?.includes(1)">
     <div [ngClass]="(screenWidth >= 1500)?'container-fluid':'container'" >
-      <a  [routerLink]="['/employer/dashboard']" href="javascript:;" class="navbar-brand" ><img src="/var/www/production/sapworld-UI/uploads"/></a>
+      <a  [routerLink]="['/employer/dashboard']" href="javascript:;" class="navbar-brand" ><img src="assets/images/logo.png"/></a>
       <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button> -->
