--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-skillset/create-candidate-skillset.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-skillset/create-candidate-skillset.component.html
@@ -157,6 +157,7 @@
 							<mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
 						</mat-chip>
 						<input placeholder=""
+						id="pskills"
 						#programInput
 						[formControl]="programCtrl"
 							[matAutocomplete]="auto"
@@ -171,6 +172,7 @@
 						</mat-option>
 					</mat-autocomplete>
 				</mat-form-field>
+				<app-control-messages [control]="f['programming_skills']"></app-control-messages>
 			</div>	
 		</div>	
     <!-- <div class="col-lg-9 col-md-6">
