--- a/frontend/src/app/shared/component/change-password/change-password.component.html
+++ b/frontend/src/app/shared/component/change-password/change-password.component.html
@@ -42,7 +42,7 @@
   </div>
   <div class="col-lg-4 col-md-6">
     <div class="form-group">
-      <button  [disabled]="changePasswordForm.invalid" type="submit" class="btn btn-theme-blue btn-block btn-lg">
+      <button type="submit" class="btn btn-theme-blue btn-block btn-lg">
         <span [hidden]="isLoading">{{ "shared.submit" | translate }}</span>
           <span [hidden]="!isLoading">
             <i class="fa fa-spinner" aria-hidden="true"></i>
