--- a/frontend/src/app/modules/features/user/profile/create-candidate/candidate-review-modal/candidate-review-modal.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/candidate-review-modal/candidate-review-modal.component.html
@@ -313,7 +313,7 @@
 				</div>
 				<div class="col-lg-8 col-md-8 matches-6  col-sm-8 info">
 					<ul class="list-group">
-						<li class="list-group-item text-uppercase" *ngIf="childForm?.value?.skillSet?.skills"> 
+						<li class="list-group-item text-uppercase" *ngIf="childForm?.value?.skillSet?.skills; else elsenullknw"> 
 							<ng-container *ngIf="childForm?.value?.skillSet?.skills.length; else elseSkillsTemplate">
 							<small class="knldge m-0 float-left" *ngFor="let item of utilsHelperService.differenceByPropValArray(childForm?.value?.skillSet?.skills, childForm?.value?.skillSet?.hands_on_experience, 'skill_id'); let last = last;">
 							<span class="knldge"  tooltipClass="my-custom-class"  container="body"   placement="top" [ngbTooltip]="utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(item)?.long_tag)">
@@ -326,8 +326,8 @@
 			data-target="#addCriteria">{{"shared.add" | translate }} </button>
 				</ng-template>
 						</li>
-						<ng-template *ngIf="!childForm?.value?.skillSet?.skills">
-							<<li class="list-group-item" >
+						<ng-template #elsenullknw>
+							<li class="list-group-item" >
 						<button style="font-size: 10px;padding: 5px;"(click)="onOpenCriteriaModal('skills')" type="button" class="btn btn-theme-green" data-toggle="modal"
 			data-target="#addCriteria">{{"shared.add" | translate }} </button></li>
 				</ng-template>
